--- a/src/views/partials/_testimonial.ejs
+++ b/src/views/partials/_testimonial.ejs
@@ -1,6 +1,6 @@
-<div>
-	<div>
-		<p></p>
-		<span></span>
+<div id="testimonial">
+	<div class="blockquote">
+		<p><%= quote %></p>
+		<span><%= author %></span>
 	</div>
 </div>
